# JniDemo3

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jnidemo3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/jni/: jni_dynamic_load.cpp
app/src/main/cpp/people/: People.cpp  People.h
app/src/main/java/com/example/jnidemo3/: MainActivity.java
app/src/main/java/com/example/jnidemo3/jni/: ICallback.java  IThreadCallback.java  JNIAccessField.java  JNIAccessMethod.java  JNIBasicType.java  JNIConstructorClass.java  JNIInvokeMethod.java  JNIRefrenceType.java  JNIStringType.java  Person.java
app/src/main/java/com/example/jnidemo3/load/: JNIDynamicLoad.java
app/src/test/java/com/example/jnidemo3/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
